[tool.poetry]
name = "deltaupgrade"
version = "0.1.0"
description = ""
authors = ["ttran <ms.tam.h.tran@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.22.0"
python-dotenv = "^1.0.1"
webdriver-manager = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
